--- a/index.html
+++ b/index.html
@@ -21,186 +21,198 @@
   </head>
   <body>
     <header>
-      <nav>
-        <a class="head-logo" href="./index.html"
-          >Web<span class="head-logo-studio">Studio</span></a
-        >
-        <ul>
-          <li><a class="navi-item" href="./index.html">Studio</a></li>
-          <li><a class="navi-item" href="">Portfolio</a></li>
-          <li><a class="navi-item" href="">Contacts</a></li>
-        </ul>
-      </nav>
-      <address class="location">
-        <ul>
-          <li>
-            <a class="contacts" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a class="contacts" href="tel:+110001111111">+11 (000) 111-11-11</a>
-          </li>
-        </ul>
-      </address>
+      <div class="container">
+        <nav>
+          <a class="head-logo" href="./index.html"
+            >Web<span class="head-logo-studio">Studio</span></a
+          >
+          <ul>
+            <li><a class="navi-item" href="./index.html">Studio</a></li>
+            <li><a class="navi-item" href="">Portfolio</a></li>
+            <li><a class="navi-item" href="">Contacts</a></li>
+          </ul>
+        </nav>
+        <address class="location">
+          <ul>
+            <li>
+              <a class="contacts" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a class="contacts" href="tel:+110001111111">+11 (000) 111-11-11</a>
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
     <main>
       <section class="hero">
-        <h1 class="hero-title">Effective Solutions for Your Business</h1>
-        <button class="hero-button" type="button">Order Service</button>
+        <div class="container">
+          <h1 class="hero-title">Effective Solutions for Your Business</h1>
+          <button class="hero-button" type="button">Order Service</button>
+        </div>
       </section>
-      <section>
-        <h2>Features</h2>
+      <section class="features">
+        <h2 class="visually-hidden">Features</h2>
+        <div class="container">
         <ul>
-          <li>
-            <h3 class="features-title">Strategy</h3>
-            <p class="features-text">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li>
-            <h3 class="features-title">Punctuality</h3>
-            <p class="features-text">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li>
-            <h3 class="features-title">Diligence</h3>
-            <p class="features-text">
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
-          <li>
-            <h3 class="features-title">Technologies</h3>
-            <p class="features-text">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+            <li>
+              <h3 class="features-title">Strategy</h3>
+              <p class="features-text">
+                Our goal is to identify the business problem to walk away with the
+                perfect and creative solution.
+              </p>
+            </li>
+            <li>
+              <h3 class="features-title">Punctuality</h3>
+              <p class="features-text">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li>
+              <h3 class="features-title">Diligence</h3>
+              <p class="features-text">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
+            <li>
+              <h3 class="features-title">Technologies</h3>
+              <p class="features-text">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        <div>
       </section>
       <section class="team">
-        <h2 class="team-title">Our Team</h2>
-        <ul>
-          <li class="team-item">
-            <img
-              src="./images/Mark.jpg"
-              alt="Mark Guerrero Product Designer"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-persons">Mark Guerrero</h3>
-            <p class="team-text">Product Designer</p>
-          </li>
-          <li class="team-item">
-            <img
-              src="./images/Tom.jpg"
-              alt="Tom Ford Frontend Developer"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-persons">Tom Ford</h3>
-            <p class="team-text">Frontend Developer</p>
-          </li>
-          <li class="team-item">
-            <img
-              src="./images/Camila.jpg"
-              alt="Camila Garcia Marketing"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-persons">Camila Garcia</h3>
-            <p class="team-text">Marketing</p>
-          </li>
-          <li class="team-item">
-            <img
-              src="./images/Daniel.jpg"
-              alt="Daniel Wilson UI Designer"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-persons">Daniel Wilson</h3>
-            <p class="team-text">UI Designer</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="team-title">Our Team</h2>
+          <ul>
+            <li class="team-item">
+              <img
+                src="./images/Mark.jpg"
+                alt="Mark Guerrero Product Designer"
+                width="264"
+                height="260"
+              />
+              <h3 class="team-persons">Mark Guerrero</h3>
+              <p class="team-text">Product Designer</p>
+            </li>
+            <li class="team-item">
+              <img
+                src="./images/Tom.jpg"
+                alt="Tom Ford Frontend Developer"
+                width="264"
+                height="260"
+              />
+              <h3 class="team-persons">Tom Ford</h3>
+              <p class="team-text">Frontend Developer</p>
+            </li>
+            <li class="team-item">
+              <img
+                src="./images/Camila.jpg"
+                alt="Camila Garcia Marketing"
+                width="264"
+                height="260"
+              />
+              <h3 class="team-persons">Camila Garcia</h3>
+              <p class="team-text">Marketing</p>
+            </li>
+            <li class="team-item">
+              <img
+                src="./images/Daniel.jpg"
+                alt="Daniel Wilson UI Designer"
+                width="264"
+                height="260"
+              />
+              <h3 class="team-persons">Daniel Wilson</h3>
+              <p class="team-text">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
-      <section>
-        <h2 class="portfolio-title">Our Portfolio</h2>
-        <ul>
-          <li>
-            <img
-              src="./images/portfolio-1.jpg"
-              alt="Banking App"
-              width="360"
-              height="300"
-            />
-            <h3 class="projects-title">Banking App</h3>
-            <p class="project-text">App</p>
-          </li>
-          <li>
-            <img
-              src="./images/portfolio-2.jpg"
-              alt="Cashless Payment"
-              width="360"
-              height="300"
-            />
-            <h3 class="projects-title">Cashless Payment</h3>
-            <p class="project-text">Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/portfolio-3.jpg"
-              alt="Meditation App"
-              width="360"
-              height="300"
-            />
-            <h3 class="projects-title">Meditation App</h3>
-            <p class="project-text">App</p>
-          </li>
-          <li>
-            <img
-              src="./images/portfolio-4.jpg"
-              alt="Taxi Service"
-              width="360"
-              height="300"
-            />
-            <h3 class="projects-title">Taxi Service</h3>
-            <p class="project-text">Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/portfolio-5.jpg"
-              alt="Screen Illustrations"
-              width="360"
-              height="300"
-            />
-            <h3 class="projects-title">Screen Illustrations</h3>
-            <p class="project-text">Design</p>
-          </li>
-          <li>
-            <img
-              src="./images/portfolio-6.jpg"
-              alt="Online Courses"
-              width="360"
-              height="300"
-            />
-            <h3 class="projects-title">Online Courses</h3>
-            <p class="project-text">Marketing</p>
-          </li>
-        </ul>
+      <section class="portfolio">
+        <div class="container">
+          <h2 class="portfolio-title">Our Portfolio</h2>
+          <ul>
+            <li>
+              <img
+                src="./images/portfolio-1.jpg"
+                alt="Banking App"
+                width="360"
+                height="300"
+              />
+              <h3 class="projects-title">Banking App</h3>
+              <p class="project-text">App</p>
+            </li>
+            <li>
+              <img
+                src="./images/portfolio-2.jpg"
+                alt="Cashless Payment"
+                width="360"
+                height="300"
+              />
+              <h3 class="projects-title">Cashless Payment</h3>
+              <p class="project-text">Marketing</p>
+            </li>
+            <li>
+              <img
+                src="./images/portfolio-3.jpg"
+                alt="Meditation App"
+                width="360"
+                height="300"
+              />
+              <h3 class="projects-title">Meditation App</h3>
+              <p class="project-text">App</p>
+            </li>
+            <li>
+              <img
+                src="./images/portfolio-4.jpg"
+                alt="Taxi Service"
+                width="360"
+                height="300"
+              />
+              <h3 class="projects-title">Taxi Service</h3>
+              <p class="project-text">Marketing</p>
+            </li>
+            <li>
+              <img
+                src="./images/portfolio-5.jpg"
+                alt="Screen Illustrations"
+                width="360"
+                height="300"
+              />
+              <h3 class="projects-title">Screen Illustrations</h3>
+              <p class="project-text">Design</p>
+            </li>
+            <li>
+              <img
+                src="./images/portfolio-6.jpg"
+                alt="Online Courses"
+                width="360"
+                height="300"
+              />
+              <h3 class="projects-title">Online Courses</h3>
+              <p class="project-text">Marketing</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer class="hell">
-      <a class="head-logo" href="./index.html"
-        >Web<span class="foot-logo-studio">Studio</span></a
-      >
-      <p class="hell-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container">
+        <a class="head-logo" href="./index.html"
+          >Web<span class="foot-logo-studio">Studio</span></a
+        >
+        <p class="hell-text">
+          Increase the flow of customers and sales for your business with digital
+          marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
