--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header>
+    <header class="header">
       <div class="container">
         <nav>
           <a class="head-logo" href="./index.html"
@@ -47,13 +47,13 @@
       </div>
     </header>
     <main>
-      <section class="hero">
+      <section class="section hero">
         <div class="container">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
           <button class="hero-button" type="button">Order Service</button>
         </div>
       </section>
-      <section class="features">
+      <section class="section">
         <h2 class="visually-hidden">Features</h2>
         <div class="container">
         <ul>
@@ -88,12 +88,12 @@
           </ul>
         <div>
       </section>
-      <section class="team">
+      <section class="section">
         <div class="container">
           <h2 class="team-title">Our Team</h2>
           <ul>
             <li class="team-item">
-              <img
+              <img 
                 src="./images/Mark.jpg"
                 alt="Mark Guerrero Product Designer"
                 width="264"
@@ -135,7 +135,7 @@
           </ul>
         </div>
       </section>
-      <section class="portfolio">
+      <section class="section">
         <div class="container">
           <h2 class="portfolio-title">Our Portfolio</h2>
           <ul>
@@ -216,3 +216,4 @@
     </footer>
   </body>
 </html>
+
