--- a/index.html
+++ b/index.html
@@ -21,19 +21,19 @@
   </head>
   <body>
     <header class="header">
-      <div class="container">
-        <nav>
-          <a class="head-logo" href="./index.html"
-            >Web<span class="head-logo-studio">Studio</span></a
+      <div class="container header-container">
+        <nav class="header-navigation">
+          <a class="header-logo" href="./index.html"
+            >Web<span class="header-logo-studio">Studio</span></a
           >
-          <ul>
+          <ul class="navi-list">
             <li><a class="navi-item" href="./index.html">Studio</a></li>
             <li><a class="navi-item" href="">Portfolio</a></li>
             <li><a class="navi-item" href="">Contacts</a></li>
           </ul>
         </nav>
-        <address class="location">
-          <ul>
+        <address class="address">
+          <ul class="contacts-list">
             <li>
               <a class="contacts" href="mailto:info@devstudio.com"
                 >info@devstudio.com</a
