--- a/index.html
+++ b/index.html
@@ -56,29 +56,29 @@
       <section class="section">
         <h2 class="visually-hidden">Features</h2>
         <div class="container">
-        <ul>
-            <li>
+        <ul class="features-list">
+            <li class="features-item">
               <h3 class="features-title">Strategy</h3>
               <p class="features-text">
                 Our goal is to identify the business problem to walk away with the
                 perfect and creative solution.
               </p>
             </li>
-            <li>
+            <li class="features-item">
               <h3 class="features-title">Punctuality</h3>
               <p class="features-text">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
             </li>
-            <li>
+            <li class="features-item">
               <h3 class="features-title">Diligence</h3>
               <p class="features-text">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
               </p>
             </li>
-            <li>
+            <li class="features-item">
               <h3 class="features-title">Technologies</h3>
               <p class="features-text">
                 Design practice focused on digital experiences. We bring forth a
@@ -88,10 +88,10 @@
           </ul>
         <div>
       </section>
-      <section class="section">
+      <section class="section team">
         <div class="container">
           <h2 class="team-title">Our Team</h2>
-          <ul>
+          <ul class="team-list">
             <li class="team-item">
               <img 
                 src="./images/Mark.jpg"
@@ -138,8 +138,8 @@
       <section class="section">
         <div class="container">
           <h2 class="portfolio-title">Our Portfolio</h2>
-          <ul>
-            <li>
+          <ul class="portfolio-list">
+            <li class="portfolio-item">
               <img
                 src="./images/portfolio-1.jpg"
                 alt="Banking App"
@@ -149,7 +149,7 @@
               <h3 class="projects-title">Banking App</h3>
               <p class="project-text">App</p>
             </li>
-            <li>
+            <li class="portfolio-item">
               <img
                 src="./images/portfolio-2.jpg"
                 alt="Cashless Payment"
@@ -159,7 +159,7 @@
               <h3 class="projects-title">Cashless Payment</h3>
               <p class="project-text">Marketing</p>
             </li>
-            <li>
+            <li class="portfolio-item">
               <img
                 src="./images/portfolio-3.jpg"
                 alt="Meditation App"
@@ -169,7 +169,7 @@
               <h3 class="projects-title">Meditation App</h3>
               <p class="project-text">App</p>
             </li>
-            <li>
+            <li class="portfolio-item">
               <img
                 src="./images/portfolio-4.jpg"
                 alt="Taxi Service"
@@ -179,7 +179,7 @@
               <h3 class="projects-title">Taxi Service</h3>
               <p class="project-text">Marketing</p>
             </li>
-            <li>
+            <li class="portfolio-item">
               <img
                 src="./images/portfolio-5.jpg"
                 alt="Screen Illustrations"
@@ -189,7 +189,7 @@
               <h3 class="projects-title">Screen Illustrations</h3>
               <p class="project-text">Design</p>
             </li>
-            <li>
+            <li class="portfolio-item">
               <img
                 src="./images/portfolio-6.jpg"
                 alt="Online Courses"
@@ -216,4 +216,3 @@
     </footer>
   </body>
 </html>
-
