--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
               >
             </li>
             <li>
-              <a class="contacts" href="tel:+110001111111">+11 (000) 111-11-11</a>
+              <a class="contacts" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
             </li>
           </ul>
         </address>
@@ -56,12 +58,12 @@
       <section class="section">
         <h2 class="visually-hidden">Features</h2>
         <div class="container">
-        <ul class="features-list">
+          <ul class="features-list">
             <li class="features-item">
               <h3 class="features-title">Strategy</h3>
               <p class="features-text">
-                Our goal is to identify the business problem to walk away with the
-                perfect and creative solution.
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
               </p>
             </li>
             <li class="features-item">
@@ -86,14 +88,14 @@
               </p>
             </li>
           </ul>
-        <div>
+        </div>
       </section>
       <section class="section team">
         <div class="container">
           <h2 class="team-title">Our Team</h2>
           <ul class="team-list">
             <li class="team-item">
-              <img 
+              <img
                 src="./images/Mark.jpg"
                 alt="Mark Guerrero Product Designer"
                 width="264"
@@ -209,8 +211,8 @@
           >Web<span class="foot-logo-studio">Studio</span></a
         >
         <p class="hell-text">
-          Increase the flow of customers and sales for your business with digital
-          marketing & growth solutions.
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
         </p>
       </div>
     </footer>
