--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
     </main>
     <footer class="hell">
       <div class="container">
-        <a class="head-logo" href="./index.html"
+        <a class="foot-logo" href="./index.html"
           >Web<span class="foot-logo-studio">Studio</span></a
         >
         <p class="hell-text">
