--- a/index.html
+++ b/index.html
@@ -101,8 +101,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-persons">Mark Guerrero</h3>
-              <p class="team-text">Product Designer</p>
+              <div class="bio">
+                <h3 class="team-persons">Mark Guerrero</h3>
+                <p class="team-text">Product Designer</p>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -111,8 +113,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-persons">Tom Ford</h3>
-              <p class="team-text">Frontend Developer</p>
+              <div class="bio">
+                <h3 class="team-persons">Tom Ford</h3>
+                <p class="team-text">Frontend Developer</p>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -121,8 +125,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-persons">Camila Garcia</h3>
-              <p class="team-text">Marketing</p>
+              <div class="bio">
+                <h3 class="team-persons">Camila Garcia</h3>
+                <p class="team-text">Marketing</p>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -131,8 +137,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-persons">Daniel Wilson</h3>
-              <p class="team-text">UI Designer</p>
+              <div class="bio">
+                <h3 class="team-persons">Daniel Wilson</h3>
+                <p class="team-text">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
