--- a/index.html
+++ b/index.html
@@ -156,8 +156,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="projects-title">Banking App</h3>
-              <p class="project-text">App</p>
+              <div class="projects">
+                <h3 class="projects-title">Banking App</h3>
+                <p class="project-text">App</p>
+              </div>
             </li>
             <li class="portfolio-item">
               <img
@@ -166,8 +168,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="projects-title">Cashless Payment</h3>
-              <p class="project-text">Marketing</p>
+              <div class="projects">
+                <h3 class="projects-title">Cashless Payment</h3>
+                <p class="project-text">Marketing</p>
+              </div>
             </li>
             <li class="portfolio-item">
               <img
@@ -176,8 +180,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="projects-title">Meditation App</h3>
-              <p class="project-text">App</p>
+              <div class="projects">
+                <h3 class="projects-title">Meditation App</h3>
+                <p class="project-text">App</p>
+              </div>
             </li>
             <li class="portfolio-item">
               <img
@@ -186,8 +192,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="projects-title">Taxi Service</h3>
-              <p class="project-text">Marketing</p>
+              <div class="projects">
+                <h3 class="projects-title">Taxi Service</h3>
+                <p class="project-text">Marketing</p>
+              </div>
             </li>
             <li class="portfolio-item">
               <img
@@ -196,8 +204,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="projects-title">Screen Illustrations</h3>
-              <p class="project-text">Design</p>
+              <div class="projects">
+                <h3 class="projects-title">Screen Illustrations</h3>
+                <p class="project-text">Design</p>
+              </div>
             </li>
             <li class="portfolio-item">
               <img
@@ -206,8 +216,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="projects-title">Online Courses</h3>
-              <p class="project-text">Marketing</p>
+              <div class="projects">
+                <h3 class="projects-title">Online Courses</h3>
+                <p class="project-text">Marketing</p>
+              </div>
             </li>
           </ul>
         </div>
